force-app/main/objects/System__c.object
<CustomObject>
    <fields>
        <fullName>System_Type__c</fullName>
        <label>System Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TalentCentral</fullName>
                </value>
                <value>
                    <fullName>TalentCentral+</fullName>
                </value>
                <value>
                    <fullName>iAssess/Amcatglobal</fullName>
                </value>
                <value>
                    <fullName>iAssess</fullName>
                </value>
                <value>
                    <fullName>BrainBench</fullName>
                </value>
                <value>
                    <fullName>Data Warehouse</fullName>
                </value>
                <value>
                    <fullName>Elearning</fullName>
                </value>
                <value>
                    <fullName>Insights via TC</fullName>
                </value>
                <value>
                    <fullName>Insights via TC+</fullName>
                </value>
                <value>
                    <fullName>Legacy System</fullName>
                </value>
                <value>
                    <fullName>MFS</fullName>
                </value>
                <value>
                    <fullName>NVM/Phone</fullName>
                </value>
                <value>
                    <fullName>Partner Portal</fullName>
                </value>
                <value>
                    <fullName>Practice site</fullName>
                </value>
                <value>
                    <fullName>SFDC</fullName>
                </value>
                <value>
                    <fullName>SHL Online</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>VADC</fullName>
                </value>
                <value>
                    <fullName>VADC Dedicated Support</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>DSPS</fullName>
                </value>
                <value>
                    <fullName>Kwiz</fullName>
                </value>
                <value>
                    <fullName>Leader Edge</fullName>
                </value>
                <value>
                    <fullName>Nacho</fullName>
                </value>
                <value>
                    <fullName>Offline</fullName>
                </value>
                <value>
                    <fullName>S2P</fullName>
                </value>
                <value>
                    <fullName>SODA</fullName>
                </value>
                <value>
                    <fullName>Talent Analytics</fullName>
                </value>
                <value>
                    <fullName>Valtera</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_UAT_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System UAT completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_URL__c</fullName>
        <label>System URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TC_Integration_Type__c</fullName>
        <label>TC Integration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Backwards Compatible</fullName>
                </value>
                <value>
                    <fullName>Adaptor Enabled</fullName>
                </value>
                <value>
                    <fullName>TMS API</fullName>
                </value>
                <value>
                    <fullName>Integration Team to confirm</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Talent_Central__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TC Transition record</label>
        <referenceTo>Talent_Central__c</referenceTo>
        <relationshipLabel>TalentCentral related systems</relationshipLabel>
        <relationshipName>Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Talent_Measurement_Process__c</fullName>
        <description>The process used to measure talent</description>
        <inlineHelpText>Talent Measurement process: 
Source, Screen, Assess (web), Assess (office), Background</inlineHelpText>
        <label>Talent Measurement Process</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Technical_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Systems</relationshipLabel>
        <relationshipName>Systems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technographic_Category__c</fullName>
        <label>Technographic Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>DIGITAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Center__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the account use an outsourced provider for proctoring tests?</inlineHelpText>
        <label>Test Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Legacy_Units_removed__c</fullName>
        <label>Total Legacy Units removed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_TalentCentral_Units_added__c</fullName>
        <label>Total TalentCentral Units added</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transition_Completion_email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transition Completion email sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transition_Confirmation_Email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transition Confirmation Email sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UAT_ID__c</fullName>
        <label>UAT ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upgrade_information__c</fullName>
        <inlineHelpText>Please provide details of the upgrades made to this system</inlineHelpText>
        <label>Upgrade information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Users_Set_to_Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Users on Legacy System Set to Read Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Users_created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Users migrated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Platform Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>System</label>
    <listViews>
        <fullName>AFM_Reseller_Accounts</fullName>
        <columns>Estimated_Live_Date__c</columns>
        <columns>Live_Date__c</columns>
        <columns>Account__c</columns>
        <columns>System_Client_ID__c</columns>
        <columns>System_Client_Name__c</columns>
        <columns>Status__c</columns>
        <columns>System_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>BU__c</columns>
        <columns>D_Number__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>System_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integrated__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>afm</value>
        </filters>
        <filters>
            <field>System_Creation_requested__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>System_Type__c</field>
            <operation>equals</operation>
            <value>S2P,SODA,TalentCentral</value>
        </filters>
        <label>AFM Reseller Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>System_Type__c</columns>
        <columns>System_Client_ID__c</columns>
        <columns>Account__c</columns>
        <columns>BU__c</columns>
        <columns>Live_Date__c</columns>
        <columns>System_Name__c</columns>
        <columns>System_URL__c</columns>
        <columns>Integrated__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>System_Type__c</field>
            <operation>equals</operation>
            <value>TalentCentral</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_MFS</fullName>
        <columns>System_Client_ID__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>System_Type__c</field>
            <operation>equals</operation>
            <value>MFS</value>
        </filters>
        <label>All MFS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_SHL_Systems</fullName>
        <columns>NAME</columns>
        <columns>D_Number__c</columns>
        <columns>BU__c</columns>
        <columns>Account__c</columns>
        <columns>System_URL__c</columns>
        <columns>Live_Date__c</columns>
        <columns>Date_Upgraded__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Client_System__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>System_Type__c</field>
            <operation>equals</operation>
            <value>Elearning</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Development,Live</value>
        </filters>
        <label>All SHL E-learning Systems</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Generic_Systems</fullName>
        <columns>NAME</columns>
        <columns>Technographic_Category__c</columns>
        <columns>Technology__c</columns>
        <columns>Sub_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>System__c.HR_MS_System</value>
        </filters>
        <label>Generic Systems</label>
    </listViews>
    <listViews>
        <fullName>NOS</fullName>
        <columns>Estimated_Live_Date__c</columns>
        <columns>Integration_Notes__c</columns>
        <columns>Account__c</columns>
        <columns>System_Type__c</columns>
        <columns>System_Client_ID__c</columns>
        <columns>System_URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>BU__c</columns>
        <columns>D_Number__c</columns>
        <columns>System_Client_Name__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integrated__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <filters>
            <field>Estimated_Live_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Development</value>
        </filters>
        <filters>
            <field>System_Creation_requested__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>System_Type__c</field>
            <operation>equals</operation>
            <value>S2P,SODA,TalentCentral</value>
        </filters>
        <label>NOS to check by delivery date</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NOS_to_check_by_delivery_date_today</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>Estimated_Live_Date__c</columns>
        <columns>Live_Date__c</columns>
        <columns>Integration_Notes__c</columns>
        <columns>Account__c</columns>
        <columns>System_Type__c</columns>
        <columns>System_Client_ID__c</columns>
        <columns>System_URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>BU__c</columns>
        <columns>D_Number__c</columns>
        <columns>System_Client_Name__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integrated__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <filters>
            <field>Estimated_Live_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Development</value>
        </filters>
        <filters>
            <field>System_Creation_requested__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>System_Type__c</field>
            <operation>equals</operation>
            <value>S2P,SODA,TalentCentral</value>
        </filters>
        <filters>
            <field>System_Client_Name__c</field>
            <operation>notContain</operation>
            <value>managed services</value>
        </filters>
        <label>NOS to check by delivery date (-today)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PVSystems</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>BU__c</columns>
        <columns>D_Number__c</columns>
        <columns>System_Client_ID__c</columns>
        <columns>System_Client_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Previsor_Migration_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>PVSystems</label>
    </listViews>
    <listViews>
        <fullName>Systems_by_Account</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>BU__c</columns>
        <columns>D_Number__c</columns>
        <columns>System_Client_ID__c</columns>
        <columns>System_Client_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>Systems by Account</label>
    </listViews>
    <listViews>
        <fullName>Talevation_Reseller_Accounts</fullName>
        <columns>Estimated_Live_Date__c</columns>
        <columns>Account__c</columns>
        <columns>System_Type__c</columns>
        <columns>System_Client_ID__c</columns>
        <columns>System_URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>BU__c</columns>
        <columns>D_Number__c</columns>
        <columns>System_Client_Name__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integrated__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Talevation</value>
        </filters>
        <filters>
            <field>System_Creation_requested__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>System_Type__c</field>
            <operation>equals</operation>
            <value>S2P,SODA,TalentCentral</value>
        </filters>
        <label>Talevation Reseller Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Zelle_Reseller_Accounts</fullName>
        <columns>Estimated_Live_Date__c</columns>
        <columns>Account__c</columns>
        <columns>System_Type__c</columns>
        <columns>System_Client_ID__c</columns>
        <columns>System_URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>BU__c</columns>
        <columns>D_Number__c</columns>
        <columns>System_Client_Name__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integrated__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>zelle</value>
        </filters>
        <filters>
            <field>System_Creation_requested__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>System_Type__c</field>
            <operation>equals</operation>
            <value>S2P,SODA,TalentCentral</value>
        </filters>
        <label>Zelle Reseller Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Zelle_Reseller_Accounts1</fullName>
        <columns>Estimated_Live_Date__c</columns>
        <columns>Live_Date__c</columns>
        <columns>Account__c</columns>
        <columns>System_Client_ID__c</columns>
        <columns>Status__c</columns>
        <columns>System_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>BU__c</columns>
        <columns>D_Number__c</columns>
        <columns>System_Client_Name__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>System_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integrated__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>zelle</value>
        </filters>
        <filters>
            <field>System_Creation_requested__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>System_Type__c</field>
            <operation>equals</operation>
            <value>S2P,SODA,TalentCentral</value>
        </filters>
        <label>Zelle Reseller Accounts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SYS{00000}</displayFormat>
        <label>SFDC Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Systems</pluralLabel>
    <recordTypes>
        <fullName>Client_System</fullName>
        <active>true</active>
        <description>This system represents a Client System</description>
        <label>Client System</label>
    </recordTypes>
    <recordTypes>
        <fullName>HR_MS_System</fullName>
        <active>true</active>
        <label>Generic System</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHL_System</fullName>
        <active>true</active>
        <description>This system represents an SHL System</description>
        <label>SHL System</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Integrator_account_required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(  Integrated__c , &quot;Yes&quot;) ,ISBLANK( Integrator_Account__c), !ISCHANGED(Date_Upgraded__c ) )</errorConditionFormula>
        <errorDisplayField>Integrator_Account__c</errorDisplayField>
        <errorMessage>Please link this system to the related integrator account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Integrator_platform_required</fullName>
        <active>false</active>
        <description>AND(ISPICKVAL( Integrated__c , &quot;Yes&quot;) ,ISBLANK(TEXT( Integrator_Platform__c)), !ISCHANGED(Date_Upgraded__c ) )</description>
        <errorConditionFormula>AND(ISPICKVAL( Integrated__c , &quot;Yes&quot;) ,ISBLANK(TEXT( Integrator_Platform__c)),  CONTAINS( Integrator_Account__r.Name , &apos; (Alliance)&apos;)  )</errorConditionFormula>
        <errorDisplayField>Integrator_Platform__c</errorDisplayField>
        <errorMessage>Please update the Integrator Platform field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Live_date_required_if_status_is_Live</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Status__c , &quot;Live&quot;) , ISBLANK(Live_Date__c ), !ISCHANGED(Date_Upgraded__c ),RecordType.Name&lt;&gt; &quot;Generic System&quot;)</errorConditionFormula>
        <errorDisplayField>Live_Date__c</errorDisplayField>
        <errorMessage>A live date should entered for all live systems</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>System_URL_Mandatory</fullName>
        <active>true</active>
        <description>To make the System URL field mandatory for all System Type except SODA.</description>
        <errorConditionFormula>AND( NOT( ISPICKVAL( System_Type__c ,&quot;SODA&quot;)),  
				ISBLANK(System_URL__c), !ISCHANGED(Date_Upgraded__c ),RecordType.Name&lt;&gt; &quot;Generic System&quot;)</errorConditionFormula>
        <errorDisplayField>System_URL__c</errorDisplayField>
        <errorMessage>Please fill the System URL field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TC_Integration_Type_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(System_Type__c , &apos;TalentCentral&apos;) , ISPICKVAL(Integrated__c,&apos;Yes&apos;) ,OR(ISPICKVAL(  TC_Integration_Type__c,&apos;&apos;),ISPICKVAL(  TC_Integration_Type__c,&apos;None&apos;)  ))</errorConditionFormula>
        <errorDisplayField>TC_Integration_Type__c</errorDisplayField>
        <errorMessage>Please select TC Integration Type</errorMessage>
    </validationRules>
</CustomObject>